--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <!--  -->
 				<p>To be dragged:</p>
 				<p class="drag" draggable="true" data-index="1">
-					Costs of steel for the BMW 4 Series Coupé
+					abcgde
 	                        </p>
 				<p class="drag" draggable="true" data-index="1">
 					Costs of steering wheels for the BMW 4 Series Coupé
