--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			height: 100%;
       margin-left: 100px;
       margin-top: 30px;
-      
+      overflow: hidden;
 		}
 		.first {
 			background-color: #96d9de;
@@ -118,7 +118,7 @@
         <!--  -->
 				<p>To be dragged:</p>
 				<p class="drag" draggable="true" data-index="1">
-					abcgde
+					Costs of steel for the BMW 4 Series Coupé 
 	                        </p>
 				<p class="drag" draggable="true" data-index="1">
 					Costs of steering wheels for the BMW 4 Series Coupé
