--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
 			width: 460px;
 			padding-left: 15px;
 			margin-top: 15px;
-			overflow: hidden;
+			/*overflow: hidden;
 			text-overflow: ellipsis;
-			white-space: nowrap;
+			white-space: nowrap;*/
 		}
 		.wrapper li {
 			padding-left: 15px;
