--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 		.box {
 			width: 100%;
 			height: 100%;
-      margin-left: 100px;
-      margin-top: 30px;
-      overflow: hidden;
+			margin-left: 100px;
+			margin-top: 30px;
+			overflow: hidden;
 		}
 		.first {
 			background-color: #96d9de;
@@ -41,6 +41,16 @@
 		.wrapper li {
 			padding-left: 15px;
 			margin-top: 15px;
+		}
+		.wrapper li :hover {
+			cursor: pointer;
+		}
+		.wrapper p {
+			padding-left: 15px;
+			margin-top: 15px;
+		}
+		.wrapper p :hover{
+			cursor: pointer;
 		}
 		.ulWraper {
 			float: left;
@@ -70,87 +80,95 @@
 		.text {
 			width: 15px;
 		}
-    .table {
-      float: left;
-    }
-    .thead {
-      width: 200px;
-      height: 100px;
-      text-align: center;
-    }
-    .wrapper {
-      width: 300px;
-      height: 300px;
-    }
-    .edit {
-      text-indent: 40px;
-      width: 800px;
-      font-size: 20px;
-    }
+		.table {
+			float: left;
+		}
+		.thead {
+			width: 200px;
+			height: 100px;
+			text-align: center;
+		}
+		.wrapper {
+			width: 300px;
+			height: 300px;
+		}
+		.edit {
+			text-indent: 40px;
+			width: 800px;
+			font-size: 20px;
+		}
+		p:hover {
+			cursor: pointer;
+		}
 	</style>
 	<body>
 		<div class="box">
-      <div class="edit">
-        Let’s now take an example of one of the most famous automobile companies in Germany, BMW.  Here are various costs incurred in BMW. Try to distinguish them into corresponding cost types. Let’s say the cost object is all BMW 4 Series Coupé produced.
-      </div>
-			<table border="1" class="table" cellspacing="0" cellpadding="0" >
+			<div class="edit">
+				Let’s now take an example of one of the most famous automobile companies
+				in Germany, BMW. Here are various costs incurred in BMW. Try to
+				distinguish them into corresponding cost types. Let’s say the cost
+				object is all BMW 4 Series Coupé produced.
+			</div>
+			<table border="1" class="table" cellspacing="0" cellpadding="0">
 				<tr>
 					<td></td>
 					<td class="thead">Direct costs</td>
-					<td  class="thead">Indirect costs</td>
+					<td class="thead">Indirect costs</td>
 				</tr>
 				<tr>
-					<td  class="thead">Variable costs</td>
+					<td class="thead">Variable costs</td>
 					<td class="wrapper first" data-index="1"></td>
 					<td class="wrapper two" data-index="2"></td>
 				</tr>
 				<tr>
-					<td  class="thead">Fixed costs</td>
+					<td class="thead">Fixed costs</td>
 					<td class="wrapper three" data-index="3"></td>
 					<td class="wrapper four" data-index="4"></td>
 				</tr>
 			</table>
 
 			<div class="cardBox" ">
-        <!--  -->
-				<p>To be dragged:</p>
-				<p class="drag" draggable="true" data-index="1">
-					Costs of steel for the BMW 4 Series Coupé 
-	                        </p>
-				<p class="drag" draggable="true" data-index="1">
-					Costs of steering wheels for the BMW 4 Series Coupé
-	                        </p>
-				<p class="drag" draggable="true" data-index="1">
-					Cost of paint for for the BMW 4 Series Coupé
-                                </p>
-				<p class="drag" draggable="true" data-index="1">
-					Salary of temporary workers which are only involved in the assembly of BMW 4 Series Coupé
-                                </p>
-				<p class="drag" draggable="true" data-index="2">
-					Electricity costs at the BMW Group Plant Dingolfing which produces BMW 4 Series Coupé and many other car models.
-                                </p>
-				<p class="drag" draggable="true" data-index="2">
-					Maintenance costs for the BMW Group Plant Dingolfing which produces BMW 4 Series Coupé and many other car models.
-                                </p>
-				<p class="drag" draggable="true" data-index="3">
-					Salary of manager that is responsible for the production of   BMW 4 Series Coupé only
-                                </p>                 
-		                <p class="drag" draggable="true" data-index="3">
-					Depreciation of the machinery and manufacturing equipment which is only used for producing the BMW 4 Series Coupé
-                                </p>
-				<p class="drag" draggable="true" data-index="4">
-					Annual license fees for software such as CATIA
-                                </p>
-				<p class="drag" draggable="true" data-index="4">
-					Salary of the plant manager of BMW Group Plant Dingolfing who oversees the production of BMW 4 Series Coupé and many other car models
-                                </p>                 
-		                <p class="drag" draggable="true" data-index="4">
-					Depreciation of the BMW Headquarter
-                                </p>   
-									       
-        
-				<!-- <p class="btn">submit</p> -->
-			</div>
+			<!--  -->
+			<p>To be dragged:</p>
+			<p class="drag" draggable="true" data-index="1">
+				Costs of steel for the BMW 4 Series Coupé
+			</p>
+			<p class="drag" draggable="true" data-index="1">
+				Costs of steering wheels for the BMW 4 Series Coupé
+			</p>
+			<p class="drag" draggable="true" data-index="1">
+				Cost of paint for for the BMW 4 Series Coupé
+			</p>
+			<p class="drag" draggable="true" data-index="1">
+				Salary of temporary workers which are only involved in the assembly of
+				BMW 4 Series Coupé
+			</p>
+			<p class="drag" draggable="true" data-index="2">
+				Electricity costs at the BMW Group Plant Dingolfing which produces BMW 4
+				Series Coupé and many other car models.
+			</p>
+			<p class="drag" draggable="true" data-index="2">
+				Maintenance costs for the BMW Group Plant Dingolfing which produces BMW
+				4 Series Coupé and many other car models.
+			</p>
+			<p class="drag" draggable="true" data-index="3">
+				Salary of manager that is responsible for the production of BMW 4 Series
+				Coupé only
+			</p>
+			<p class="drag" draggable="true" data-index="3">
+				Depreciation of the machinery and manufacturing equipment which is only
+				used for producing the BMW 4 Series Coupé
+			</p>
+			<p class="drag" draggable="true" data-index="4">
+				Annual license fees for software such as CATIA
+			</p>
+			<p class="drag" draggable="true" data-index="4">
+				Salary of the plant manager of BMW Group Plant Dingolfing who oversees
+				the production of BMW 4 Series Coupé and many other car models
+			</p>
+			<p class="drag" draggable="true" data-index="4">
+				Depreciation of the BMW Headquarter
+			</p>
 		</div>
 	</body>
 </html>
