--- a/demo/index.html
+++ b/demo/index.html
@@ -17,11 +17,7 @@
           drop your selected components into the income statement table on next page.
         </div>
       </div>
-      <div class="right">
-        <p>Income statement</p>
-        <p>Company XYZ</p>
-        <p> 31.12.20XX</p>
-      </div>
+
     </div>
     <div class="bottom">
       <div class="left">
@@ -29,13 +25,13 @@
           <li>
             <span class="drag" data-index="1" draggable="true">Current Assets</span>
             <span data-index="1" class="bold drag" draggable="true">Taxes</span>
-            <span class="drag" draggable="true" data-index="1" >Depreciation & Amortization</span>
+            <span class="drag" draggable="true" data-index="1">Depreciation & Amortization</span>
           </li>
 
           <li>
             <span class="bold" draggable="true">Gross profit</span>
-            <span data-index="1" class=" drag" draggable="true" >Deferred</span>
-            <span draggable="true">Interests</span>
+            <span data-index="1" class=" drag" draggable="true">Deferred</span>
+            <span draggable="true" class=" drag" data-index="1">Interests</span>
           </li>
 
           <li>
@@ -79,6 +75,11 @@
         </ul>
       </div>
       <div class="right">
+        <div class="title">
+          <p>Income statement</p>
+          <p>Company XYZ</p>
+          <p> 31.12.20XX</p>
+        </div>
         <table border="1" class="table" cellspacing="0" cellpadding="0">
           <tr>
             <td class="symbol"></td>
@@ -97,16 +98,17 @@
             <td class="container containers4" data-index="4"></td>
           </tr>
           <tr>
-            <td class="symbol" >=</td>
-            <td  class="container containers5" data-index="4" ></td>
+            <td class="symbol">=</td>
+            <td class="container containers5" data-index="4"></td>
           </tr>
           <tr>
             <td class="symbol">-</td>
-            <td  class="container containers6" data-index="4"></td>
+            <td class="container containers6" data-index="4"></td>
           </tr>
           <tr>
             <td class="symbol">=</td>
-            <td  class="container containers7" data-index="4"</td>
+            <td class="container containers7" data-index="4"
+            </td>
           </tr>
 
         </table>
