--- a/demo/index.html
+++ b/demo/index.html
@@ -14,7 +14,7 @@
       <div class="left">
         <h2>Task: Sort the components of an income statement in the correct order</h2>
         <div class="hint">Hint: You should first identify which components belong to the income statement. Then drag and
-          drop your selected components into the income statement table on next page.
+          drop your selected components into the income statement table on the right hand side.
         </div>
       </div>
 
@@ -23,52 +23,52 @@
       <div class="left">
         <ul class="cardBox">
           <li>
-            <span class="drag" data-index="1" draggable="true">Current Assets</span>
-            <span data-index="1" class="bold drag" draggable="true">Taxes</span>
-            <span class="drag" draggable="true" data-index="1">Depreciation & Amortization</span>
+            <span class="drag" data-index="8" draggable="true">Current Assets</span>
+            <span class="drag" data-index="6" draggable="true">Taxes</span>
+            <span class="drag" data-index="4" draggable="true">Depreciation & Amortization</span>
           </li>
 
           <li>
-            <span class="bold" draggable="true">Gross profit</span>
-            <span data-index="1" class=" drag" draggable="true">Deferred</span>
-            <span draggable="true" class=" drag" data-index="1">Interests</span>
+            <span class="drag bold" data-index="3" draggable="true">Gross Profit</span>
+            <span class="drag" data-index="8" draggable="true">Deferred Revenue</span>
+            <span class="drag" data-index="8" draggable="true">Short-Term Debt</span>
           </li>
 
           <li>
-            <span class="drag" data-index="1" draggable="true">Long-Term Debt</span>
-            <span class="drag" data-index="1" draggable="true">General & Administrative expenses</span>
-            <span class="drag" data-index="1" draggable="true">Short-term Debt</span>
+            <span class="drag" data-index="8" draggable="true">Long-Term Debt</span>
+            <span class="drag" data-index="4" draggable="true">General & Administrative Expenses</span>
+            <span class="drag" data-index="6" draggable="true">Interests</span>
           </li>
 
           <li>
-            <span class="drag bold" data-index="1" draggable="true">Operating income (EBIT)</span>
+            <span class="drag bold" data-index="5" draggable="true">Operating Income (EBIT)</span>
             <span class="drag" data-index="1" draggable="true">Revenue</span>
-            <span class="drag bold" data-index="1" draggable="true">Net income</span>
+            <span class="drag" data-index="8" draggable="true">Cash and Cash Equivalents  </span>
           </li>
           <li>
-            <span class="drag " data-index="1" draggable="true">Long-term Assets</span>
-            <span class="drag" data-index="1" draggable="true">Cost of Goods Sold (COGS)</span>
-            <span class="drag" data-index="1" draggable="true">Interest Received </span>
+            <span class="drag" data-index="8" draggable="true">Long-Term Assets</span>
+            <span class="drag" data-index="2" draggable="true">Cost of Goods Sold (COGS)</span>
+            <span class="drag" data-index="8" draggable="true">Interest Received </span>
           </li>
           <li>
-            <span class="drag " data-index="1" draggable="true">R&D costs</span>
-            <span class="drag" data-index="1" draggable="true">Cash and cash equivalents  </span>
-            <span class="drag" data-index="1" draggable="true">Marketing & Sales expenses</span>
+            <span class="drag" data-index="4" draggable="true">R&D Costs</span>
+            <span class="drag bold" data-index="7" draggable="true">Net Income</span>
+            <span class="drag" data-index="4" draggable="true">Marketing & Sales Expenses</span>
           </li>
           <li>
-            <span class="drag " data-index="1" draggable="true">Accounts payable</span>
-            <span class="drag" data-index="1" draggable="true">Shareholders Equity </span>
-            <span class="drag" data-index="1" draggable="true">Accrued expenses  </span>
+            <span class="drag" data-index="8" draggable="true">Accounts Payable</span>
+            <span class="drag" data-index="8" draggable="true">Shareholders Equity </span>
+            <span class="drag" data-index="8" draggable="true">Accrued Expenses  </span>
           </li>
           <li>
-            <span class="drag " data-index="1" draggable="true">Pre-paid expense  </span>
-            <span class="drag" data-index="1" draggable="true">Other operating expenses </span>
-            <span class="drag" data-index="1" draggable="true">Dividends</span>
+            <span class="drag" data-index="4" draggable="true">Other Operating Expenses </span>
+            <span class="drag" data-index="8" draggable="true">Inventories</span>
+            <span class="drag" data-index="8" draggable="true">Dividends</span>
           </li>
           <li>
-            <span class="drag " data-index="1" draggable="true">Inventories</span>
-            <span class="drag" data-index="8" draggable="true">Wages & salaries</span>
-            <span class="drag" data-index="8" draggable="true">Accounts receivable</span>
+            <span class="drag" data-index="8" draggable="true">Pre-paid Expense  </span>
+            <span class="drag" data-index="4" draggable="true">Wages & Salaries</span>
+            <span class="drag" data-index="8" draggable="true">Accounts Receivable</span>
           </li>
 
 
