--- a/module 1 FVDI costs/index.html
+++ b/module 1 FVDI costs/index.html
@@ -117,6 +117,8 @@
 </style>
 
 <body>
+  <img src="logo.png"
+      width="1380">
 <div class="box">
   <div class="edit">
     Let’s now take an example of one of the most famous automobile companies
