--- a/module 6 income statement/index.html
+++ b/module 6 income statement/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
 <div>
+  <img src="logo.png"
+      width="1250">
   <div class="box">
     <div class="top">
       <div class="left">
