--- a/module_6_income_statement/index.html
+++ b/module_6_income_statement/index.html
@@ -15,8 +15,8 @@
     <div class="top">
       <div class="left">
         <h2>Task: Sort the components of an income statement in the correct order</h2>
-        <div class="hint">Hint: You should first identify which components belong to the income statement. Then drag and
-          drop your selected components into the income statement table on the right hand side.
+        <div class="hint">Hint: First identify which components belong to the income statement. 
+        <br>Then drag and drop your selected components into the income statement table.
         </div>
       </div>
 
