--- a/module_6_income_statement/index.html
+++ b/module_6_income_statement/index.html
@@ -14,9 +14,10 @@
   <div class="box">
     <div class="top">
       <div class="left">
-        <h2>Task: Sort the components of an income statement in the correct order</h2>
-        <div class="hint">Hint: First identify which components belong to the income statement. 
-        <br>Then drag and drop your selected components into the income statement table.
+        <h2>Task: Sort the components of an income statement<br>in the correct order</h2>
+        <div class="hint">Hint: <br>First identify which components belong to the income statement. 
+        <br>Then drag and drop your selected components into the income statement
+        <br>table on the right hand side.
         </div>
       </div>
 
