--- a/module_6_income_statement/index.html
+++ b/module_6_income_statement/index.html
@@ -43,14 +43,14 @@
           </li>
 
           <li>
-            <span class="drag bold" data-index="5" draggable="true">Operating Income (EBIT)</span>
+            <span class="drag bold" data-index="5" draggable="true">Operating Income</span>
             <span class="drag" data-index="1" draggable="true">Revenue</span>
-            <span class="drag" data-index="8" draggable="true">Cash and Cash Equivalents  </span>
+            <span class="drag" data-index="8" draggable="true">Cash & Cash Equivalents</span>
           </li>
           <li>
             <span class="drag" data-index="8" draggable="true">Long-Term Assets</span>
-            <span class="drag" data-index="2" draggable="true">Cost of Goods Sold (COGS)</span>
-            <span class="drag" data-index="8" draggable="true">Interest Received </span>
+            <span class="drag" data-index="2" draggable="true">Cost of Goods Sold</span>
+            <span class="drag" data-index="8" draggable="true">Dividends</span>
           </li>
           <li>
             <span class="drag" data-index="4" draggable="true">R&D Costs</span>
@@ -59,16 +59,16 @@
           </li>
           <li>
             <span class="drag" data-index="8" draggable="true">Accounts Payable</span>
-            <span class="drag" data-index="8" draggable="true">Shareholders Equity </span>
-            <span class="drag" data-index="8" draggable="true">Accrued Expenses  </span>
+            <span class="drag" data-index="8" draggable="true">Shareholders Equity</span>
+            <span class="drag" data-index="8" draggable="true">Accrued Expenses</span>
           </li>
           <li>
-            <span class="drag" data-index="4" draggable="true">Other Operating Expenses </span>
+            <span class="drag" data-index="4" draggable="true">Other Operating Expenses</span>
             <span class="drag" data-index="8" draggable="true">Long-Term Debt</span>
-            <span class="drag" data-index="8" draggable="true">Dividends</span>
+            <span class="drag" data-index="8" draggable="true">Interest Received</span>
           </li>
           <li>
-            <span class="drag" data-index="8" draggable="true">Pre-paid Expense  </span>
+            <span class="drag" data-index="8" draggable="true">Pre-paid Expense</span>
             <span class="drag" data-index="4" draggable="true">Wages & Salaries</span>
             <span class="drag" data-index="8" draggable="true">Accounts Receivable</span>
           </li>
