--- a/module_6_income_statement/index.html
+++ b/module_6_income_statement/index.html
@@ -16,7 +16,7 @@
       <div class="left">
         <h2>Task: Sort the components of an income statement<br>in the correct order</h2>
         <div class="hint">Hint: <br>First identify which components belong to the income statement. 
-         <br>Then drag and drop your selected components into the income statement.
+         <br>Then drag and drop your selected components into the table.
         </div>
       </div>
 
