--- a/module_6_income_statement/index.html
+++ b/module_6_income_statement/index.html
@@ -15,7 +15,7 @@
     <div class="top">
       <div class="left">
         <h2>Task: Sort the components of an income statement in the correct order</h2>
-        <div class="hint">Hint: First identify which components belong to the income statement. Then drag and drop your selected components into the table.
+        <div class="hint">Hint: First identify which components belong to the income statement.<br>Then drag and drop your selected components into the table.
         </div>
       </div>
 
