--- a/module_6_income_statement/index.html
+++ b/module_6_income_statement/index.html
@@ -7,6 +7,11 @@
   <script src="./index.js"></script>
   <link rel="stylesheet" href="./index.css">
 </head>
+<style>
+  .x=cardBox {
+    margin-left:50px;
+    float:left;
+  }
 <body>
 <div>
   <img src="logo.png"
