--- a/module_6_income_statement/index.html
+++ b/module_6_income_statement/index.html
@@ -8,11 +8,13 @@
   <link rel="stylesheet" href="./index.css">
 </head>
 <style>
-  .x=cardBox {
-    margin-left:50px;
-    float:left;
-    margin-right: 100px;
-  }
+  
+    .cardBox p {
+        width: 460px;
+        padding-left: 15px;
+        margin-top: 15px;
+    }
+<style>
 <body>
 <div>
   <img src="logo.png"
