--- a/module_1_FVDI_costs/index.html
+++ b/module_1_FVDI_costs/index.html
@@ -24,19 +24,19 @@
     }
 
     .upperLeft {
-        background-color: #fbe5d7;
+        background-color: #ffffff;
     }
 
     .upperRight {
-        background-color: #fff2cf;
+        background-color: #ffffff;
     }
 
     .lowerLeft {
-        background-color: #dae3f2;
+        background-color: #ffffff;
     }
 
     .lowerRight {
-        background-color: #daf0f9;
+        background-color: #ffffff;
     }
 
     .cardBox p {
