--- a/module_1_FVDI_costs/index.html
+++ b/module_1_FVDI_costs/index.html
@@ -121,9 +121,9 @@
 <div class="box">
   <div class="edit">
     Let’s now take an example of one of the most famous automobile companies
-    in Germany, BMW. Here are various costs incurred in BMW. Try to
-    distinguish them into corresponding cost types. Let’s say the cost
-    object is all BMW 4 Series Coupé produced.
+    in Germany, namely BMW. How would you categorize the following cost examples if the cost object is all cars of the BMW 4 Series Coupé 
+    which are produced at BMW Group plant Dingolfing? BMW also produces many other car models 
+    such as the BMW 6 series gran turismo at the same plant in Dingolfing.
   </div>
   <table border="1" class="table" cellspacing="0" cellpadding="0">
     <tr>
@@ -145,8 +145,6 @@
 
   <div class="cardBox">
     <h2>To be dragged:</h2>
-    <p class=" drag" draggable="true" data-index="4">
-      Depreciation of the BMW Headquarter
     </p>
     <p class="drag" draggable="true" data-index="1">
       Costs of steel for the BMW 4 Series Coupé
@@ -156,18 +154,18 @@
       BMW 4 Series Coupé
     </p>
     <p class="drag" draggable="true" data-index="2">
-      Electricity costs at the BMW Group Plant Dingolfing which produces BMW 4
+      Power costs at the BMW Group Plant Dingolfing which produces BMW 4
       Series Coupé and many other car models.
     </p>
     <p class="drag" draggable="true" data-index="4">
-      Annual license fees for software such as CATIA
+      Annual license fees for a software used to simulate car crashes 
     </p>
     <p class="drag" draggable="true" data-index="3">
-      Salary of manager that is responsible for the production of BMW 4 Series
+      Salary of supervisor responsible for the assembly of BMW 4 Series
       Coupé only
     </p>
     <p class="drag" draggable="true" data-index="1">
-      Costs of steering wheels for the BMW 4 Series Coupé
+      Costs of the steering wheels for the BMW 4 Series Coupé
     </p>
     <p class="drag" draggable="true" data-index="3">
       Depreciation of the machinery and manufacturing equipment which is only
@@ -182,7 +180,7 @@
       the production of BMW 4 Series Coupé and many other car models
     </p>
     <p class="drag" draggable="true" data-index="1">
-      Cost of paint for for the BMW 4 Series Coupé
+      Cost of paint for the BMW 4 Series Coupé
     </p>
   </div>
 </div>
