--- a/module_1_FVDI_costs/index.html
+++ b/module_1_FVDI_costs/index.html
@@ -43,6 +43,7 @@
         width: 460px;
         padding-left: 15px;
         margin-top: 15px;
+        font-family: Arial, sans-serif;
     }
 
     .wrapper li {
