--- a/module_1_FVDI_costs/index.html
+++ b/module_1_FVDI_costs/index.html
@@ -21,6 +21,7 @@
         margin-left: 100px;
         margin-top: 30px;
         overflow: hidden;
+        font-family: Arial, sans-serif
     }
 
     .upperLeft {
@@ -121,6 +122,7 @@
 
 <div class="box">
   <div class="edit">
+    <h2>Task: Header </h2>
     Let’s now take an example of one of the most famous automobile companies
     in Germany, namely BMW. How would you categorize the following cost examples if the cost object is all cars of the BMW 4 Series Coupé 
     which are produced at BMW Group plant Dingolfing? BMW also produces many other car models 
