--- a/module_1_FVDI_costs/index.html
+++ b/module_1_FVDI_costs/index.html
@@ -70,7 +70,7 @@
     }
 
     .cardBox {
-        border: 4px solid #0343A8;
+        border: 4px solid #ffffff;
         margin-left: 50px;
         float: left;
     }
