--- a/module_1_FVDI_costs/index.html
+++ b/module_1_FVDI_costs/index.html
@@ -99,6 +99,7 @@
         height: 50px;
         text-align: center;
         font-size: 20px;
+        font-family: Arial, sans-serif
     }
 
     .wrapper {
@@ -147,7 +148,6 @@
   </table>
 
   <div class="cardBox">
-    <h2>To be dragged:</h2>
     </p>
     <p class="drag" draggable="true" data-index="1">
       Costs of steel for the BMW 4 Series Coupé
