--- a/module_1_FVDI_costs/index.html
+++ b/module_1_FVDI_costs/index.html
@@ -13,6 +13,8 @@
         margin: 0;
         padding: 0;
         list-style: none;
+        font-weight: normal;
+        font-style: normal;
     }
 
     .box {
@@ -21,7 +23,6 @@
         margin-left: 100px;
         margin-top: 30px;
         overflow: hidden;
-        font-family: Arial, sans-serif
     }
 
     .upperLeft {
@@ -44,7 +45,7 @@
         width: 460px;
         padding-left: 15px;
         margin-top: 15px;
-        font-family: Arial, sans-serif;
+        background-color: #ffffff;
     }
 
     .wrapper li {
@@ -73,6 +74,7 @@
         border: 4px solid #ffffff;
         margin-left: 50px;
         float: left;
+        background-color:#BDD7EE
     }
 
     .right {
@@ -99,7 +101,6 @@
         height: 50px;
         text-align: center;
         font-size: 20px;
-        font-family: Arial, sans-serif
     }
 
     .wrapper {
