--- a/module_1_FVDI_costs/index.html
+++ b/module_1_FVDI_costs/index.html
@@ -45,7 +45,7 @@
         width: 460px;
         padding-left: 15px;
         margin-top: 15px;
-        background-color: #ffffff;
+        background-color: #BDD7EE;
     }
 
     .wrapper li {
@@ -74,7 +74,6 @@
         border: 4px solid #ffffff;
         margin-left: 50px;
         float: left;
-        background-color:#BDD7EE
     }
 
     .right {
