--- a/module_1_FVDI_costs/index.html
+++ b/module_1_FVDI_costs/index.html
@@ -45,7 +45,7 @@
         width: 460px;
         padding-left: 15px;
         margin-top: 15px;
-        background-color: #BDD7EE;
+        background-color: #ffffff;
     }
 
     .wrapper li {
