--- a/module_1_FVDI_costs/index.html
+++ b/module_1_FVDI_costs/index.html
@@ -34,7 +34,7 @@
     }
 
     .lowerLeft {
-        background-color: #005eb8;
+        background-color: #ffffff;
     }
 
     .lowerRight {
@@ -45,7 +45,7 @@
         width: 460px;
         padding-left: 15px;
         margin-top: 15px;
-        background-color: #005eb8;
+        background-color: #b5d1eb;
     }
 
     .wrapper li {
