--- a/module_1_FVDI_costs/index.html
+++ b/module_1_FVDI_costs/index.html
@@ -46,6 +46,7 @@
         padding-left: 15px;
         margin-top: 15px;
         background-color: #b5d1eb;
+        border-radius: 5px;
     }
 
     .wrapper li {
