--- a/module_1_FVDI_costs/index.html
+++ b/module_1_FVDI_costs/index.html
@@ -124,7 +124,7 @@
 
 <div class="box">
   <div class="edit">
-    </p> Direct, indirect, variable and fixed costs <br>
+    Direct, indirect, variable and fixed costs <br>
     Let’s now take an example of the BMW Group, one of the most famous automobile companies
     in Germany. How would you categorize the following cost examples if the cost object is all cars of the BMW 4 Series Coupé 
     which are produced at BMW Group plant Dingolfing? BMW also produces many other car models 
