--- a/module_1_FVDI_costs/index.html
+++ b/module_1_FVDI_costs/index.html
@@ -45,7 +45,7 @@
         width: 460px;
         padding-left: 15px;
         margin-top: 15px;
-        background-color: #ffffff;
+        background-color: #b5a1eb;
         border-radius: 5px;
     }
 
@@ -124,8 +124,8 @@
 
 <div class="box">
   <div class="edit">
-    <h2> Direct, indirect, variable and fixed costs <h2>
-    Let’s now take an example of the BMW Group, one of the most famous automobile companies
+    <p/> Direct, indirect, variable and fixed costs <h2>
+    <p/> Let’s now take an example of the BMW Group, one of the most famous automobile companies
     in Germany. How would you categorize the following cost examples if the cost object is all cars of the BMW 4 Series Coupé 
     which are produced at BMW Group plant Dingolfing? BMW also produces many other car models 
     such as the BMW 6 series gran turismo at the same plant in Dingolfing.
