标题的处理

--- a/module_1_FVDI_costs/index.html
+++ b/module_1_FVDI_costs/index.html
@@ -109,7 +109,7 @@
     }
 
     .edit {
-        text-indent: 40px;
+        /* text-indent: 40px; */
         width: 780px;
         font-size: 20px;
         margin-bottom: 20px;
@@ -125,11 +125,10 @@
 <div class="box">
   <div class="edit">
     <h2>Direct, indirect, variable and fixed costs </h2>
-    </p>
-    Let’s now take an example of the BMW Group, one of the most famous automobile companies
+    <p>Let’s now take an example of the BMW Group, one of the most famous automobile companies
     in Germany. How would you categorize the following cost examples if the cost object is all cars of the BMW 4 Series Coupé 
     which are produced at BMW Group plant Dingolfing? BMW also produces many other car models 
-    such as the BMW 6 series gran turismo at the same plant in Dingolfing.
+    such as the BMW 6 series gran turismo at the same plant in Dingolfing.</p>
   </div>
   <table border="1" class="table" cellspacing="0" cellpadding="0">
     <tr>
