--- a/module_1_FVDI_costs/index.html
+++ b/module_1_FVDI_costs/index.html
@@ -109,9 +109,9 @@
     }
 
     .edit {
-        /* text-indent: 40px; */
+        /* text-indent: 40px; */ /* control indentation */
         width: 780px;
-        font-size: 20px;
+        /* font-size: 20px; */ /* control font size */
         margin-bottom: 20px;
     }
 
