--- a/module_1_FVDI_costs/index.html
+++ b/module_1_FVDI_costs/index.html
@@ -15,6 +15,7 @@
         list-style: none;
         font-weight: normal;
         font-style: normal;
+        /* font-family: "Times New Roman", Times, serif; */
     }
 
     .box {
@@ -113,6 +114,7 @@
         width: 780px;
         /* font-size: 20px; */ /* control font size */
         margin-bottom: 20px;
+        /* font-family: "Times New Roman", Times, serif; */
     }
 
     p:hover {
