--- a/module_1_FVDI_costs/index.html
+++ b/module_1_FVDI_costs/index.html
@@ -46,7 +46,7 @@
         width: 460px;
         padding-left: 15px;
         margin-top: 15px;
-        background-color: #b5d1eb;
+        background-color: #ffffff;
         border-radius: 5px;
     }
 
@@ -74,6 +74,7 @@
 
     .cardBox {
         border: 4px solid #ffffff;
+        background-color: #ffffff;
         margin-left: 50px;
         float: left;
     }
@@ -152,29 +153,29 @@
 
   <div class="cardBox">
     <p class="drag" draggable="true" data-index="1">
-      Costs of steel for the BMW 4 Series Coupé
+      Costs of steel for the BMW 4 Series Coupé.
     </p>
     <p class="drag" draggable="true" data-index="1">
       Salary of temporary workers which are only involved in the assembly of
-      BMW 4 Series Coupé
+      BMW 4 Series Coupé.
     </p>
     <p class="drag" draggable="true" data-index="2">
       Power costs at the BMW Group Plant Dingolfing which produces BMW 4
       Series Coupé and many other car models.
     </p>
     <p class="drag" draggable="true" data-index="4">
-      Annual license fees for a software used to simulate car crashes 
+      Annual license fees for a software used to simulate car crashes.
     </p>
     <p class="drag" draggable="true" data-index="3">
       Salary of supervisor responsible for the assembly of BMW 4 Series
-      Coupé only
+      Coupé only.
     </p>
     <p class="drag" draggable="true" data-index="1">
-      Costs of the steering wheels for the BMW 4 Series Coupé
+      Costs of the steering wheels for the BMW 4 Series Coupé.
     </p>
     <p class="drag" draggable="true" data-index="3">
       Depreciation of the machinery and manufacturing equipment which is only
-      used for producing the BMW 4 Series Coupé
+      used for producing the BMW 4 Series Coupé.
     </p>
     <p class="drag" draggable="true" data-index="2">
       Maintenance costs for the BMW Group Plant Dingolfing which produces BMW
@@ -182,10 +183,10 @@
     </p>
     <p class="drag" draggable="true" data-index="4">
       Salary of the plant manager of BMW Group Plant Dingolfing who oversees
-      the production of BMW 4 Series Coupé and many other car models
+      the production of BMW 4 Series Coupé and many other car models.
     </p>
     <p class="drag" draggable="true" data-index="1">
-      Cost of paint for the BMW 4 Series Coupé
+      Cost of paint for the BMW 4 Series Coupé.
     </p>
   </div>
 </div>
