--- a/module_6_income_statement/index.html
+++ b/module_6_income_statement/index.html
@@ -22,7 +22,7 @@
       <div class="left">
         <ul class="cardBox">
           <li>
-            <span class="drag" >Current assets</span>
+            <span class="drag" draggable="true">Current assets</span>
             <span class="drag" data-index="6" draggable="true">Net income attributable to noncontrolling interests</span>
           </li>
           
