--- a/module_6_income_statement/index.html
+++ b/module_6_income_statement/index.html
@@ -91,7 +91,7 @@
       </div>
       <div class="right">
         <div class="title">
-          <p>Income statement</p>
+          <h2>Income statement</h2>
           <p>in USD millions</p>
           <p>           </p>
         </div>
