--- a/module_6_income_statement/index.html
+++ b/module_6_income_statement/index.html
@@ -12,7 +12,7 @@
   <div class="box">
     <div class="top">
       <div class="left">
-        <h3>Task: Sort the components of the income statement according to the "cost-of-sales method</h3>
+        <h2>Task: Sort the components of the income statement according to the "cost-of-sales method"</h2>
         <div class="hint">Hint: Drag and drop the components into the table.
         </div>
       </div>
@@ -70,7 +70,7 @@
       </div>
       <div class="right">
         <div class="title">
-          <h3>Income statement</h3>
+          <h2>Income statement</h2>
           <p>in USD millions</p>
           <p>           </p>
         </div>
