--- a/demo3/flowChart.html
+++ b/demo3/flowChart.html
@@ -3,142 +3,323 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+<!--    <style>-->
+<!--        .base {-->
+<!--            width: 100px;-->
+<!--            height: 80px;-->
+<!--            border-radius: 15px;-->
+<!--            box-sizing: border-box;-->
+<!--        }-->
+<!--        .base_line_height {-->
+<!--            display: block;-->
+<!--            height: 1px;-->
+<!--            background: black;-->
+<!--        }-->
+<!--        .base_line_weight {-->
+<!--            display: block;-->
+<!--            width: 1px;-->
+<!--            background: black;-->
+<!--        }-->
+<!--        .box {-->
+<!--            position: relative;-->
+<!--            width: 1000px;-->
+<!--            height: 980px;-->
+<!--            margin-left: 50px;-->
+<!--            border: 1px solid lightskyblue;-->
+<!--        }-->
+<!--        .root {-->
+<!--            width: 130px;-->
+<!--            height: 75px;-->
+<!--            box-sizing: border-box;-->
+<!--            padding: 10px;-->
+<!--            position: absolute;-->
+<!--            font-weight: 500;-->
+<!--            color: #fff;-->
+<!--            text-align: center;-->
+<!--            line-height: 30px;-->
+<!--            top: 50%;-->
+<!--            margin-top:  -50px;-->
+<!--            border-radius: 15px;-->
+<!--            background: #0559CA;-->
+<!--        }-->
+<!--        .root_line {-->
+<!--            display: block;-->
+<!--            width: 15px;-->
+<!--            height: 1px;-->
+<!--            position: absolute;-->
+<!--            right: -15px;-->
+<!--            top: 50%;-->
+<!--            background: black;-->
+<!--        }-->
+<!--        /* 三角*/-->
+<!--        .arrow {-->
+<!--            width: 0;-->
+<!--            height: 0;-->
+<!--            border-bottom: 15px solid rgba(0,0,0,.8);-->
+<!--            border-left: 5px solid transparent;-->
+<!--            border-right: 5px solid transparent;-->
+<!--            transform: rotate(90deg);-->
+<!--        }-->
+
+<!--        .child_1_top {-->
+<!--            position: absolute;-->
+<!--            margin-left: 200px;-->
+<!--            margin-top: 195px;-->
+<!--            color: #A9E9EB;-->
+<!--            padding: 10px;-->
+<!--            background: #219EE1;-->
+<!--        }-->
+<!--        .child_1_top_line {-->
+<!--            position: absolute;-->
+<!--            top: 50%;-->
+<!--            left: -30px;-->
+<!--            display: block;-->
+<!--            width: 15px;-->
+<!--        }-->
+<!--        .child_1_top_arrow {-->
+<!--            position: absolute;-->
+<!--            transform: rotate(90deg);-->
+<!--            top: 32px;-->
+<!--            left: -13px;-->
+<!--        }-->
+<!--        .child_1_top_line1 {-->
+<!--            position: absolute;-->
+<!--            height: 200px;-->
+<!--            top: 40px;-->
+<!--            left: -30px;-->
+<!--        }-->
+<!--        .child_1_top_line2 {-->
+<!--            position: absolute;-->
+<!--            height: 200px;-->
+<!--            top: -160px;-->
+<!--            left: -30px;-->
+<!--        }-->
+<!--        .child_1_bottom {-->
+<!--            margin-left: 200px;-->
+<!--            position: relative;-->
+<!--            top: 695px;-->
+<!--            color: #A9E9EB;-->
+<!--            padding: 10px;-->
+<!--            background: #219EE1;-->
+<!--        }-->
+<!--        .tip {-->
+<!--            position: absolute;-->
+<!--            box-sizing: border-box;-->
+<!--            padding: 10px;-->
+<!--            width: 80px;-->
+<!--            right: -80px;-->
+<!--            top: 0px;-->
+<!--            background: #fff;-->
+<!--            color: black;-->
+<!--        }-->
+<!--    </style>-->
     <style>
-        .base {
-            width: 100px;
-            height: 80px;
-            border-radius: 15px;
-            box-sizing: border-box;
-        }
-        .base_line_height {
-            display: block;
-            height: 1px;
-            background: black;
-        }
-        .base_line_weight {
-            display: block;
-            width: 1px;
-            background: black;
+        * {
+            list-style: none;
+            margin: 0;
+            padding: 0;
         }
         .box {
             position: relative;
-            width: 1000px;
-            height: 980px;
-            margin-left: 50px;
-            border: 1px solid lightskyblue;
+            width: 800px;
+            height: 800px;
+            background-color: #FFFFFF;
         }
-        .root {
-            width: 130px;
-            height: 75px;
-            box-sizing: border-box;
-            padding: 10px;
+        .box img {
+            float: left;
+            width: 572px;
+            height: 608px;
+            margin-right: 20px;
+        }
+        .ul_box {
+            float: left;
+        }
+        .ul_box li {
+            width: 70px;
+            height: 50px;
+            margin-top: 12px;
+            border-radius: 10px;
+            background: aquamarine;
+        }
+        .ul_box li:nth-child(1) {
+            margin-top: 0;
+            width: 70px;
+            height: 50px;
+            border-radius: 10px;
+            background: aquamarine;
+        }
+        .ul_wrap {
+            float: left;
+        }
+        .ul_wrap li:nth-child(1){
+
             position: absolute;
-            font-weight: 500;
-            color: #fff;
-            text-align: center;
-            line-height: 30px;
-            top: 50%;
-            margin-top:  -50px;
-            border-radius: 15px;
-            background: #0559CA;
+            top: 416px;
+            left: 153px;
+            width: 68px;
+            height: 50px;
+            border: 1px solid black;
+            border-radius: 5px;
+            background: #13A2E3;
         }
-        .root_line {
-            display: block;
-            width: 15px;
-            height: 1px;
+        .ul_wrap li:nth-child(2){
             position: absolute;
-            right: -15px;
-            top: 50%;
-            background: black;
+            top: 235px;
+            left: 325px;
+            width: 68px;
+            height: 50px;
+            border: 1px solid black;
+            border-radius: 5px;
+            background: #DBE9FC;
         }
-        /* 三角*/
-        .arrow {
-            width: 0;
-            height: 0;
-            border-bottom: 15px solid rgba(0,0,0,.8);
-            border-left: 5px solid transparent;
-            border-right: 5px solid transparent;
-            transform: rotate(90deg);
+        .ul_wrap li:nth-child(3){
+            position: absolute;
+            top: 416px;
+            left: 324px;
+            width: 68px;
+            height: 50px;
+            border: 1px solid black;
+            border-radius: 5px;
+            background: #DBE9FC;
+        }
+        .ul_wrap li:nth-child(4){
+            position: absolute;
+            top: 63px;
+            left: 497px;
+            width: 68px;
+            height: 50px;
+            border: 1px solid black;
+            border-radius: 5px;
+            background: #FFF;
+        }
+        .ul_wrap li:nth-child(5){
+            position: absolute;
+            top: 182px;
+            left: 497px;
+            width: 68px;
+            height: 50px;
+            border: 1px solid black;
+            border-radius: 5px;
+            background: #FFF;
+        }
+        .ul_wrap li:nth-child(6){
+            position: absolute;
+            top: 243px;
+            left: 497px;
+            width: 68px;
+            height: 50px;
+            border: 1px solid black;
+            border-radius: 5px;
+            background: #FFF;
+        }
+        .ul_wrap li:nth-child(7){
+            position: absolute;
+            top: 312px;
+            left: 497px;
+            width: 68px;
+            height: 50px;
+            border: 1px solid black;
+            border-radius: 5px;
+            background: #FFF;
+        }
+        .ul_wrap li:nth-child(8){
+            position: absolute;
+            top: 372px;
+            left: 497px;
+            width: 68px;
+            height: 50px;
+            border: 1px solid black;
+            border-radius: 5px;
+            background: #FFF;
+        }
+        .ul_wrap li:nth-child(9){
+            position: absolute;
+            top: 492px;
+            left: 497px;
+            width: 68px;
+            height: 50px;
+            border: 1px solid black;
+            border-radius: 5px;
+            background: #FFF;
+        }
+        .ul_wrap li:nth-child(10){
+            position: absolute;
+            top: 553px;
+            left: 497px;
+            width: 68px;
+            height: 50px;
+            border: 1px solid black;
+            border-radius: 5px;
+            background: #FFF;
+        }
+        li {
+            font-size: 12px;
+            /*height: 52px !important;*/
+            /*width: 84px !important;*/
+
         }
 
-        .child_1_top {
-            position: absolute;
-            margin-left: 200px;
-            margin-top: 195px;
-            color: #A9E9EB;
-            padding: 10px;
-            background: #219EE1;
-        }
-        .child_1_top_line {
-            position: absolute;
-            top: 50%;
-            left: -30px;
-            display: block;
-            width: 15px;
-        }
-        .child_1_top_arrow {
-            position: absolute;
-            transform: rotate(90deg);
-            top: 32px;
-            left: -13px;
-        }
-        .child_1_top_line1 {
-            position: absolute;
-            height: 200px;
-            top: 40px;
-            left: -30px;
-        }
-        .child_1_top_line2 {
-            position: absolute;
-            height: 200px;
-            top: -160px;
-            left: -30px;
-        }
-        .child_1_bottom {
-            margin-left: 200px;
-            position: relative;
-            top: 695px;
-            color: #A9E9EB;
-            padding: 10px;
-            background: #219EE1;
-        }
-        .tip {
-            position: absolute;
-            box-sizing: border-box;
-            padding: 10px;
-            width: 80px;
-            right: -80px;
-            top: 0px;
-            background: #fff;
-            color: black;
-        }
     </style>
+    <script src="https://cdn.staticfile.org/jquery/2.2.4/jquery.js"></script>
 </head>
 <body>
+<!--    <div class="box">-->
+<!--        <div class="root">-->
+<!--            Product and service costing-->
+<!--            <i class="root_line"></i>-->
+<!--            <div class="tip"> Program types</div>-->
+<!--        </div>-->
+
+<!--        <div class="base child_1_top">-->
+<!--            Job shop-->
+<!--            production-->
+<!--            <i class="base_line_height child_1_top_line"></i>-->
+<!--            <i class="arrow child_1_top_arrow"></i>-->
+<!--            <div class="base_line_weight child_1_top_line1">-->
+<!--            </div>-->
+<!--        </div>-->
+<!--        <div class="base child_1_bottom">-->
+<!--            Job shop production-->
+<!--            <i class="base_line_height child_1_top_line"></i>-->
+<!--            <i class="arrow child_1_top_arrow"></i>-->
+<!--            <div class="base_line_weight child_1_top_line2">-->
+<!--            </div>-->
+<!--        </div>-->
+
+
+<!--    </div>-->
     <div class="box">
-        <div class="root">
-            Product and service costing
-            <i class="root_line"></i>
-            <div class="tip"> Program types</div>
-        </div>
+        <div>
+            <img src="./bg.png" alt="">
+            <ul class="ul_box" >
+                <li class="drag" draggable="true" data-index="1">Distribution method based on market</li>
+                <li class="drag" draggable="true" data-index="2">Distribution method based on market</li>
+                <li class="drag" draggable="true" data-index="3">03</li>
+                <li class="drag" draggable="true" data-index="4">04</li>
+                <li class="drag" draggable="true" data-index="5">05</li>
+                <li class="drag" draggable="true" data-index="6">06</li>
+                <li class="drag" draggable="true" data-index="7">07</li>
+                <li class="drag" draggable="true" data-index="8">08</li>
+                <li class="drag" draggable="true" data-index="9">09</li>
+                <li class="drag" draggable="true" data-index="10">10</li>
 
-        <div class="base child_1_top">
-            Job shop
-            production
-            <i class="base_line_height child_1_top_line"></i>
-            <i class="arrow child_1_top_arrow"></i>
-            <div class="base_line_weight child_1_top_line1">
-            </div>
+            </ul>
         </div>
-        <div class="base child_1_bottom">
-            Job shop production
-            <i class="base_line_height child_1_top_line"></i>
-            <i class="arrow child_1_top_arrow"></i>
-            <div class="base_line_weight child_1_top_line2">
-            </div>
-        </div>
-
+<!--       定位覆盖-->
+        <ul class="ul_wrap">
+            <li class="wrap" data-index="1">1</li>
+            <li class="wrap" data-index="2">2</li>
+            <li class="wrap" data-index="3">3</li>
+            <li class="wrap" data-index="4">4</li>
+            <li class="wrap" data-index="5">5</li>
+            <li class="wrap" data-index="6">6</li>
+            <li class="wrap" data-index="7">7</li>
+            <li class="wrap" data-index="8">8</li>
+            <li class="wrap" data-index="9">9</li>
+            <li class="wrap" data-index="10">10</li>
+        </ul>
 
     </div>
 </body>
+<script src="./index.js"></script>
 </html>
