--- a/demo3/flowChart.html
+++ b/demo3/flowChart.html
@@ -127,7 +127,7 @@
         }
         .box img {
             float: left;
-            width: 572px;
+            width: 678px;
             height: 608px;
             margin-right: 20px;
         }
@@ -137,16 +137,16 @@
         .ul_box li {
             width: 70px;
             height: 50px;
-            margin-top: 12px;
+            margin-top: 8px;
             border-radius: 10px;
-            background: aquamarine;
+            background: #FFF2CC;
         }
         .ul_box li:nth-child(1) {
             margin-top: 0;
             width: 70px;
             height: 50px;
             border-radius: 10px;
-            background: aquamarine;
+
         }
         .ul_wrap {
             float: left;
@@ -154,8 +154,8 @@
         .ul_wrap li:nth-child(1){
 
             position: absolute;
-            top: 416px;
-            left: 153px;
+            top: 414px;
+            left: 163px;
             width: 68px;
             height: 50px;
             border: 1px solid black;
@@ -164,8 +164,8 @@
         }
         .ul_wrap li:nth-child(2){
             position: absolute;
-            top: 235px;
-            left: 325px;
+            top: 234px;
+            left: 368px;
             width: 68px;
             height: 50px;
             border: 1px solid black;
@@ -174,8 +174,8 @@
         }
         .ul_wrap li:nth-child(3){
             position: absolute;
-            top: 416px;
-            left: 324px;
+            top: 414px;
+            left: 368px;
             width: 68px;
             height: 50px;
             border: 1px solid black;
@@ -184,8 +184,8 @@
         }
         .ul_wrap li:nth-child(4){
             position: absolute;
-            top: 63px;
-            left: 497px;
+            top: 62px;
+            left: 573px;
             width: 68px;
             height: 50px;
             border: 1px solid black;
@@ -194,8 +194,8 @@
         }
         .ul_wrap li:nth-child(5){
             position: absolute;
-            top: 182px;
-            left: 497px;
+            top: 181px;
+            left: 573px;
             width: 68px;
             height: 50px;
             border: 1px solid black;
@@ -204,8 +204,8 @@
         }
         .ul_wrap li:nth-child(6){
             position: absolute;
-            top: 243px;
-            left: 497px;
+            top: 242px;
+            left: 573px;
             width: 68px;
             height: 50px;
             border: 1px solid black;
@@ -214,8 +214,8 @@
         }
         .ul_wrap li:nth-child(7){
             position: absolute;
-            top: 312px;
-            left: 497px;
+            top: 311px;
+            left: 573px;
             width: 68px;
             height: 50px;
             border: 1px solid black;
@@ -224,8 +224,8 @@
         }
         .ul_wrap li:nth-child(8){
             position: absolute;
-            top: 372px;
-            left: 497px;
+            top: 371px;
+            left: 573px;
             width: 68px;
             height: 50px;
             border: 1px solid black;
@@ -234,8 +234,8 @@
         }
         .ul_wrap li:nth-child(9){
             position: absolute;
-            top: 492px;
-            left: 497px;
+            top: 491px;
+            left: 573px;
             width: 68px;
             height: 50px;
             border: 1px solid black;
@@ -244,8 +244,8 @@
         }
         .ul_wrap li:nth-child(10){
             position: absolute;
-            top: 553px;
-            left: 497px;
+            top: 551px;
+            left: 573px;
             width: 68px;
             height: 50px;
             border: 1px solid black;
@@ -253,9 +253,12 @@
             background: #FFF;
         }
         li {
+            text-align:center;
+            letter-spacing: -0.5px;
             font-size: 12px;
-            /*height: 52px !important;*/
-            /*width: 84px !important;*/
+            height: 54px !important;
+            width: 94px !important;
+
 
         }
 
@@ -290,9 +293,9 @@
 <!--    </div>-->
     <div class="box">
         <div>
-            <img src="./bg.png" alt="">
+            <img src="./bg1.png" alt="">
             <ul class="ul_box" >
-                <li class="drag" draggable="true" data-index="1">Distribution method based on market</li>
+                <li class="drag" draggable="true" data-index="1">Distribution method based on market values</li>
                 <li class="drag" draggable="true" data-index="2">Distribution method based on market</li>
                 <li class="drag" draggable="true" data-index="3">03</li>
                 <li class="drag" draggable="true" data-index="4">04</li>
