--- a/demo3/flowChart.html
+++ b/demo3/flowChart.html
@@ -296,30 +296,30 @@
             <img src="./bg1.png" alt="">
             <ul class="ul_box" >
                 <li class="drag" draggable="true" data-index="1">Distribution method based on market values</li>
-                <li class="drag" draggable="true" data-index="2">Distribution method based on market</li>
-                <li class="drag" draggable="true" data-index="3">03</li>
-                <li class="drag" draggable="true" data-index="4">04</li>
-                <li class="drag" draggable="true" data-index="5">05</li>
-                <li class="drag" draggable="true" data-index="6">06</li>
-                <li class="drag" draggable="true" data-index="7">07</li>
-                <li class="drag" draggable="true" data-index="8">08</li>
-                <li class="drag" draggable="true" data-index="9">09</li>
-                <li class="drag" draggable="true" data-index="10">10</li>
+                <li class="drag" draggable="true" data-index="2">Equivalence number method</li>
+                <li class="drag" draggable="true" data-index="3">With multiple overhead rates</li>
+                <li class="drag" draggable="true" data-index="4">Single-stage process costing</li>
+                <li class="drag" draggable="true" data-index="5">Mass and batch production</li>
+                <li class="drag" draggable="true" data-index="6">Multi-stage process costing</li>
+                <li class="drag" draggable="true" data-index="7">Interim costing</li>
+                <li class="drag" draggable="true" data-index="8">Normal Costing</li>
+                <li class="drag" draggable="true" data-index="9">Main product method</li>
+                <li class="drag" draggable="true" data-index="10">Machine-hour costing</li>
 
             </ul>
         </div>
-<!--       定位覆盖-->
+<!--       corresponding position to cover-->
         <ul class="ul_wrap">
-            <li class="wrap" data-index="1">1</li>
-            <li class="wrap" data-index="2">2</li>
-            <li class="wrap" data-index="3">3</li>
-            <li class="wrap" data-index="4">4</li>
-            <li class="wrap" data-index="5">5</li>
-            <li class="wrap" data-index="6">6</li>
-            <li class="wrap" data-index="7">7</li>
-            <li class="wrap" data-index="8">8</li>
+            <li class="wrap" data-index="5">1</li>
+            <li class="wrap" data-index="10">2</li>
+            <li class="wrap" data-index="2">3</li>
+            <li class="wrap" data-index="3">4</li>
+            <li class="wrap" data-index="7">5</li>
+            <li class="wrap" data-index="8">6</li>
+            <li class="wrap" data-index="4">7</li>
+            <li class="wrap" data-index="6">8</li>
             <li class="wrap" data-index="9">9</li>
-            <li class="wrap" data-index="10">10</li>
+            <li class="wrap" data-index="1">10</li>
         </ul>
 
     </div>
