--- a/demo3/flowChart.html
+++ b/demo3/flowChart.html
@@ -316,10 +316,8 @@
             <li class="wrap" data-index="3">4</li>
             <li class="wrap" data-index="7">5</li>
             <li class="wrap" data-index="8">6</li>
-            <li class="wrap" data-index="4">7</li>
-            <li class="wrap" data-index="6">7</li>
-            <li class="wrap" data-index="4">8</li>
-            <li class="wrap" data-index="6">8</li>
+            <li class="wrap" data-index="4" data-index="6">7</li>
+            <li class="wrap" data-index="4" data-index="6">8</li>
             <li class="wrap" data-index="9">9</li>
             <li class="wrap" data-index="1">10</li>
         </ul>
