--- a/demo3/flowChart.html
+++ b/demo3/flowChart.html
@@ -299,7 +299,9 @@
                 <li class="drag" draggable="true" data-index="2">Equivalence number method</li>
                 <li class="drag" draggable="true" data-index="3">With multiple overhead rates</li>
                 <li class="drag" draggable="true" data-index="4">Single-stage process costing</li>
+                <li class="drag" draggable="true" data-index="4">Multi-stage process costing</li>
                 <li class="drag" draggable="true" data-index="5">Mass and batch production</li>
+                <li class="drag" draggable="true" data-index="6">Single-stage process costing</li>
                 <li class="drag" draggable="true" data-index="6">Multi-stage process costing</li>
                 <li class="drag" draggable="true" data-index="7">Interim costing</li>
                 <li class="drag" draggable="true" data-index="8">Normal Costing</li>
@@ -316,8 +318,8 @@
             <li class="wrap" data-index="3">4</li>
             <li class="wrap" data-index="7">5</li>
             <li class="wrap" data-index="8">6</li>
-            <li class="wrap" data-index="4" data-index="6">7</li>
-            <li class="wrap" data-index="4" data-index="6">8</li>
+            <li class="wrap" data-index="4">7</li>
+            <li class="wrap" data-index="6">8</li>
             <li class="wrap" data-index="9">9</li>
             <li class="wrap" data-index="1">10</li>
         </ul>
