--- a/module_4_P&S Costing/flowChart.html
+++ b/module_4_P&S Costing/flowChart.html
@@ -148,16 +148,41 @@
             font-size: 12px;
             height: 54px !important;
             width: 94px !important;
-
-
+        }
+        .title p:nth-child(1) {
+            margin-left: 18px;
+            font-weight: 900;
+            font-size: 32px;
+        }
+        .title p:nth-child(2) {
+            margin-left: 18px;
+            margin-top: 15px;
+            font-weight: 900;
+            font-size: 32px;
+        }
+        .title p:nth-child(3) {
+            margin-top: 15px;
+            margin-left: 18px;
+            font-weight: 16;
+            font-weight: 500;
+            margin-bottom: 30px;
         }
 
     </style>
     <script src="https://cdn.staticfile.org/jquery/2.2.4/jquery.js"></script>
 </head>
 <body>
+    <div>
+        <div class="title">
+            <p> Module 4 Product and Service Costing</p>
+            <p>Summary Exercise: Fill in the blanks of the decision tree.</p>
+            <p>By filling the blanks, you can get an overview of the different methods and their categorization within product and service costing.
+            </p>
+        </div>
 
+    </div>
     <div class="box">
+
         <div>
             <img src="./bg1.png" alt="">
             <ul class="ul_box" >
